--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.8",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.7",
+    "react-navigation-stack": "^2.3.11"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
