--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.8",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
@@ -20,6 +21,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
+    "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.3.11"
   },
   "devDependencies": {
