--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "@react-native-community/masked-view": "^0.1.8",
+    "@react-native-community/masked-view": "^0.1.9",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
     "react": "~16.9.0",
@@ -18,11 +18,12 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0",
+    "react-native-screens": "^2.5.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-header-buttons": "^3.0.5",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.12",
+    "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
