--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-header-buttons": "^3.0.5",
+    "react-navigation-material-bottom-tabs": "^2.2.11",
     "react-navigation-stack": "^2.3.12",
     "react-navigation-tabs": "^2.8.11"
   },
