--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
+    "react-navigation-drawer": "^2.4.12",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-material-bottom-tabs": "^2.2.11",
     "react-navigation-stack": "^2.3.12",
