--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-navigation-stack": "^2.3.12",
     "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
