--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "expo-image-picker": "~8.1.0",
-    "expo-permissions": "~8.1.0"
+    "expo-permissions": "~8.1.0",
+    "expo-sqlite": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
