--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-file-system": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
